--- a/products.html
+++ b/products.html
@@ -236,6 +236,15 @@
               </div>
             </div>
 
+            <!-- Admin toolbar: Add product -->
+            <div class="row mb-3">
+              <div class="col-12 d-flex justify-content-end">
+                <button class="btn btn-success" id="addProductBtn">
+                  <i class="fas fa-plus me-2"></i> Add Product
+                </button>
+              </div>
+            </div>
+
             <!-- Products Grid -->
             <div class="row g-4" id="productsGrid">
               <!-- Products will be loaded dynamically -->
@@ -304,6 +313,53 @@
         </div>
       </div>
     </footer>
+
+    <!-- Product Add/Edit Modal -->
+    <div class="modal fade" id="productModal" tabindex="-1" aria-labelledby="productModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-lg modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="productModalLabel">Add Product</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+            <form id="productForm">
+              <input type="hidden" id="productId" />
+              <div class="row g-3">
+                <div class="col-md-6">
+                  <label class="form-label">Name</label>
+                  <input type="text" id="productName" class="form-control" required />
+                </div>
+                <div class="col-md-3">
+                  <label class="form-label">Price (₹)</label>
+                  <input type="number" id="productPrice" class="form-control" min="0" required />
+                </div>
+                <div class="col-md-3">
+                  <label class="form-label">Category</label>
+                  <input type="text" id="productCategory" class="form-control" />
+                </div>
+                <div class="col-12">
+                  <label class="form-label">Image URL</label>
+                  <input type="url" id="productImage" class="form-control" placeholder="https://example.com/image.jpg" />
+                </div>
+                <div class="col-md-4">
+                  <label class="form-label">Rating</label>
+                  <input type="number" id="productRating" class="form-control" min="0" max="5" step="0.1" />
+                </div>
+                <div class="col-12">
+                  <label class="form-label">Description</label>
+                  <textarea id="productDescription" class="form-control" rows="3"></textarea>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+            <button type="button" class="btn btn-success" id="saveProductBtn">Save Product</button>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="js/products.js"></script>
