--- a/ai-tools.html
+++ b/ai-tools.html
@@ -645,7 +645,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/ai-tools.js"></script>
+    <script src="ai-tools.js"></script>
     <script src="js/site.js"></script>
   </body>
 </html>
