--- a/cart.html
+++ b/cart.html
@@ -290,8 +290,8 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/main.js"></script>
-    <script src="js/cart.js"></script>
+    <script src="main.js"></script>
+    <script src="cart.js"></script>
     <script src="js/site.js"></script>
 </body>
 </html>
