--- a/farmers.html
+++ b/farmers.html
@@ -515,7 +515,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="js/farmers.js"></script>
+    <script src="farmers.js"></script>
     <script src="js/site.js"></script>
   </body>
 </html>
