--- a/about.html
+++ b/about.html
@@ -566,5 +566,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="main.js"></script>
     <script src="js/site.js"></script>
+    <script src="auth.js"></script>
+
   </body>
 </html>
