--- a/cart.html
+++ b/cart.html
@@ -293,5 +293,7 @@
     <script src="main.js"></script>
     <script src="cart.js"></script>
     <script src="js/site.js"></script>
+    <script src="auth.js"></script>
+
 </body>
 </html>
