--- a/contact.html
+++ b/contact.html
@@ -426,7 +426,9 @@
           }
         });
     </script>
+    
+    <script src="js/main.js"></script>
     <script src="js/site.js"></script>
-    <script src="auth.js"></script>
+    <script src="js/auth.js"></script>
   </body>
 </html>
